Fix bug in merging new and old TREC data

--- a/CollectData.ipynb
+++ b/CollectData.ipynb
@@ -111,11 +111,21 @@
    "outputs": [],
    "source": [
     "def merge_label_unlable():\n",
+    "\n",
     "    old_labels=pd.read_json(base_path+\"TRECIS_2018_2019-labels.json\", orient='records')\n",
     "    old_labels.rename(columns={\"postCategories\": \"categories\",\"postPriority\":\"priority\"}, inplace=True)\n",
     "    old_labels = old_labels[['postID', 'categories', 'priority']]\n",
+    "    l=old_labels.groupby(['postID'])['categories'].agg('sum')\n",
+    "    old_labels=old_labels.drop(columns=['categories'])\n",
+    "    old_labels=pd.merge(l,all_trec, on='postID', how='inner')\n",
+    "\n",
+    "\n",
     "    new_label = pd.read_json(base_path+\"label_2020.json\", orient='records', lines=True)\n",
     "    new_label = new_label[['postID', 'categories', 'priority']]\n",
+    "    l=new_label.groupby(['postID'])['categories'].agg('sum')\n",
+    "    new_label=new_label.drop(columns=['categories'])\n",
+    "    new_label=pd.merge(l,all_trec, on='postID', how='inner')\n",
+    "\n",
     "    labels= old_labels.append(new_label)\n",
     "\n",
     "    unlabel = pd.read_json(base_path+\"out/all-2018-2019-2020.json\", orient='records', lines=True)\n",
