Fix bug in merging new and old TREC data

--- a/CollectData.ipynb
+++ b/CollectData.ipynb
@@ -111,6 +111,7 @@
    "outputs": [],
    "source": [
     "def merge_label_unlable():\n",
+    "    all_trec=pd.read_json(base_path+\"TREC_2018-2019-2020A-TREC.json\", orient='records', lines=True)\n",
     "\n",
     "    old_labels=pd.read_json(base_path+\"TRECIS_2018_2019-labels.json\", orient='records')\n",
     "    old_labels.rename(columns={\"postCategories\": \"categories\",\"postPriority\":\"priority\"}, inplace=True)\n",
