Add heatmap visualization for similarity matrix

--- a/analyze-data.ipynb
+++ b/analyze-data.ipynb
@@ -1067,7 +1067,7 @@
     "id": "WizZdqM-VD0q"
    },
    "source": [
-    "# Generating Similarity Score\n",
+    "# Generating Similarity Scores and Matrix\n",
     "### **Mean and Cosine Similarity(each event with all other event-types)**\n"
    ]
   },
@@ -1100,6 +1100,7 @@
     "id": "M7ovyMf7WkJN"
    },
    "source": [
+    "# remove irrelevant tweets\n",
     "data = pd.read_json(\"./PR_all_Labeled.json\", orient='records',lines=True)\n",
     "data.loc[(data.eventid == 'parisAttacks2015'),'event_type']='shooting'\n",
     "def label_ir_tweets(postCategories):\n",
@@ -1164,6 +1165,7 @@
     "id": "882RiHajWysw"
    },
    "source": [
+    "# generate sentnece embedding\n",
     "class SBERT:\n",
     "\n",
     "    def __init__(self, lang=\"en\"):\n",
@@ -1255,6 +1257,7 @@
     "id": "QT05N6hhXAac"
    },
    "source": [
+    "#generate similarity scores dataframe\n",
     "event_ranks=pd.DataFrame()\n",
     "groupby_col='event_type'\n",
     "event_types=data.query(\"label==1\").groupby(\"event_type\")\n",
